force-app/main/default/objects/Sales_Order_Line__c/Sales_Order_Line__c.object-meta.xml
<CustomObject>
    <label>Sales Order Line</label>
    <nameField>
        <displayFormat>SOL-{000000}</displayFormat>
        <label>Sales Order Line number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Order Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>