force-app/main/default/objects/Sales_Order_Line__c/fields/AmountTaxSellingFCY__c.field-meta.xml
<CustomField>
    <fullName>AmountTaxSellingFCY__c</fullName>
    <formula>TaxRateSelling__c * ChargeQuantity__c * SellingListPriceFCY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Tax Selling (USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>