force-app/main/default/objects/Sales_Order_Line__c/fields/AmountTaxSellingLocal__c.field-meta.xml
<CustomField>
    <fullName>AmountTaxSellingLocal__c</fullName>
    <formula>SellingListPriceLocal__c * ChargeQuantity__c * TaxRateSelling__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Tax Selling (VND)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>