force-app/main/default/objects/Sales_Order_Line__c/fields/BlockFlow__c.field-meta.xml
<CustomField>
    <fullName>BlockFlow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Block Flow</label>
    <type>Checkbox</type>
</CustomField>