force-app/main/default/objects/Sales_Order_Line__c/fields/BuyingListPriceLocal__c.field-meta.xml
<CustomField>
    <fullName>BuyingListPriceLocal__c</fullName>
    <label>Buying List Price (VND)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>