force-app/main/default/objects/Sales_Order_Line__c/fields/Charge_unit__c.field-meta.xml
<CustomField>
    <fullName>Charge_unit__c</fullName>
    <label>Charge unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Charge_Unit</valueSetName>
    </valueSet>
</CustomField>