force-app/main/default/objects/Sales_Order_Line__c/fields/ChargeQuantity__c.field-meta.xml
<CustomField>
    <fullName>ChargeQuantity__c</fullName>
    <label>Charge Quantity</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>