force-app/main/default/objects/Sales_Order_Line__c/fields/ComboProduct__c.field-meta.xml
<CustomField>
    <fullName>ComboProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Combo Product</label>
    <referenceTo>ComboProduct__c</referenceTo>
    <relationshipLabel>Sales Order Lines</relationshipLabel>
    <relationshipName>Sales_Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>