force-app/main/default/objects/Sales_Order_Line__c/fields/Container_Type__c.field-meta.xml
<CustomField>
    <fullName>Container_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Charge_unit__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>ContainerType</valueSetName>
    </valueSet>
</CustomField>