force-app/main/default/objects/Sales_Order_Line__c/fields/Currency_Buying__c.field-meta.xml
<CustomField>
    <fullName>Currency_Buying__c</fullName>
    <label>Currency-Buying</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency</valueSetName>
    </valueSet>
</CustomField>