force-app/main/default/objects/Sales_Order_Line__c/fields/ExchangeRateBuying__c.field-meta.xml
<CustomField>
    <fullName>ExchangeRateBuying__c</fullName>
    <label>Exchange Rate - Buying (VND)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>