force-app/main/default/objects/Sales_Order_Line__c/fields/ExchangeRateBuyingUSD__c.field-meta.xml
<CustomField>
    <fullName>ExchangeRateBuyingUSD__c</fullName>
    <label>Exchange Rate - Buying (USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>