force-app/main/default/objects/Sales_Order_Line__c/fields/ExchangeRateSellingUSD__c.field-meta.xml
<CustomField>
    <fullName>ExchangeRateSellingUSD__c</fullName>
    <label>Exchange Rate - Selling (USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>