force-app/main/default/objects/Sales_Order_Line__c/fields/FxRateID__c.field-meta.xml
<CustomField>
    <fullName>FxRateID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FxRate ID - Buying</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>FxRate__c.Active1__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>FxRate__c</referenceTo>
    <relationshipLabel>Sales Order Lines (FxRate ID - Buying)</relationshipLabel>
    <relationshipName>SI_Lines1</relationshipName>
    <type>Lookup</type>
</CustomField>