force-app/main/default/objects/Sales_Order_Line__c/fields/FxRateIDSelling__c.field-meta.xml
<CustomField>
    <fullName>FxRateIDSelling__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FxRate ID - Selling</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>(1 OR 3) AND (2 OR 4)</booleanFilter>
        <filterItems>
            <field>FxRate__c.Active1__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>FxRate__c.ExchangeCurrencyFrom1__c</field>
            <operation>equals</operation>
            <valueField>$Source.CurrencySelling__c</valueField>
        </filterItems>
        <filterItems>
            <field>FxRate__c.Activeforupdate__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$Source.CurrencySelling__c</field>
            <operation>equals</operation>
            <value>VND</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>FxRate__c</referenceTo>
    <relationshipLabel>Sales Order Lines (FxRate ID - Selling)</relationshipLabel>
    <relationshipName>SI_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>