force-app/main/default/objects/Sales_Order_Line__c/fields/Invoice_to__c.field-meta.xml
<CustomField>
    <fullName>Invoice_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice to</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Order Lines (Invoice to)</relationshipLabel>
    <relationshipName>Sales_Order_Lines1</relationshipName>
    <type>Lookup</type>
</CustomField>