force-app/main/default/objects/Sales_Order_Line__c/fields/Line_Item_Name_Eng__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Name_Eng__c</fullName>
    <label>Line Item Name (Eng)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>