force-app/main/default/objects/Sales_Order_Line__c/fields/Place_of_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Delivery__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Place of Delivery</label>
    <referenceTo>PortCode__c</referenceTo>
    <relationshipLabel>Sales Order Lines (Place of Delivery)</relationshipLabel>
    <relationshipName>Sales_Order_Lines3</relationshipName>
    <type>Lookup</type>
</CustomField>