force-app/main/default/objects/Sales_Order_Line__c/fields/Place_of_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Receipt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Place of Receipt</label>
    <referenceTo>PortCode__c</referenceTo>
    <relationshipLabel>Sales Order Lines (Place of Receipt)</relationshipLabel>
    <relationshipName>Sales_Order_Lines2</relationshipName>
    <type>Lookup</type>
</CustomField>