force-app/main/default/objects/Sales_Order_Line__c/fields/POD__c.field-meta.xml
<CustomField>
    <fullName>POD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>P.O.D</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>PortCode__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>PortCode__c</referenceTo>
    <relationshipName>SI_Lines1</relationshipName>
    <type>Lookup</type>
</CustomField>