force-app/main/default/objects/Sales_Order_Line__c/fields/PriceOptionID__c.field-meta.xml
<CustomField>
    <fullName>PriceOptionID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Option ID</label>
    <referenceTo>Price_Option__c</referenceTo>
    <relationshipLabel>Sales Order Lines</relationshipLabel>
    <relationshipName>Sales_Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>