force-app/main/default/objects/Sales_Order_Line__c/fields/Quote_route__c.field-meta.xml
<CustomField>
    <fullName>Quote_route__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote route</label>
    <referenceTo>Quote_route__c</referenceTo>
    <relationshipLabel>Sales Order Lines</relationshipLabel>
    <relationshipName>Sales_Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>