force-app/main/default/objects/Sales_Order_Line__c/fields/QuotelineID__c.field-meta.xml
<CustomField>
    <fullName>QuotelineID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quoteline ID</label>
    <referenceTo>Quoteline__c</referenceTo>
    <relationshipName>SI_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>