force-app/main/default/objects/Sales_Order_Line__c/fields/RouteID__c.field-meta.xml
<CustomField>
    <fullName>RouteID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Route ID</label>
    <referenceTo>Route__c</referenceTo>
    <relationshipLabel>Sales Order Lines</relationshipLabel>
    <relationshipName>Sales_Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>