force-app/main/default/objects/Sales_Order_Line__c/fields/SellingListPriceActual__c.field-meta.xml
<CustomField>
    <fullName>SellingListPriceActual__c</fullName>
    <label>Selling List Price (Actual)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>