force-app/main/default/objects/Sales_Order_Line__c/fields/SellingListPriceFCY__c.field-meta.xml
<CustomField>
    <fullName>SellingListPriceFCY__c</fullName>
    <label>Selling List Price (USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>