force-app/main/default/objects/Sales_Order_Line__c/fields/SellingListPriceLocal__c.field-meta.xml
<CustomField>
    <fullName>SellingListPriceLocal__c</fullName>
    <label>Selling List Price (VND)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>