force-app/main/default/objects/Sales_Order_Line__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service</label>
    <referenceTo>Service__c</referenceTo>
    <relationshipName>SI_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>