force-app/main/default/objects/Sales_Order_Line__c/fields/Service_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Name__c</fullName>
    <formula>HYPERLINK( LEFT($Api.Partner_Server_URL_450, FIND(&apos;/services&apos;, $Api.Partner_Server_URL_450)) + CASESAFEID(  Service__r.Id  ),  Service__r.Name  )</formula>
    <label>Service Name</label>
    <type>Text</type>
</CustomField>