force-app/main/default/objects/Sales_Order_Line__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <formula>Service__r.Service_Type_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Type</label>
    <type>Text</type>
</CustomField>