force-app/main/default/objects/Sales_Order_Line__c/fields/SO_ID__c.field-meta.xml
<CustomField>
    <fullName>SO_ID__c</fullName>
    <label>SO ID</label>
    <referenceTo>Sales_Order__c</referenceTo>
    <relationshipLabel>Sales Order Lines</relationshipLabel>
    <relationshipName>SI_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>