force-app/main/default/objects/Sales_Order_Line__c/fields/Supplier_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment to</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Order Lines (Supplier/Vendor)</relationshipLabel>
    <relationshipName>SI_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>