force-app/main/default/objects/Sales_Order_Line__c/fields/TaxRateBuying__c.field-meta.xml
<CustomField>
    <fullName>TaxRateBuying__c</fullName>
    <label>Tax Rate-Buying(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>