force-app/main/default/objects/Sales_Order_Line__c/fields/TotalAmountofBuyingActual__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountofBuyingActual__c</fullName>
    <formula>ChargeQuantity__c * BuyingListPriceActual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount of Buying (Actual)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>