force-app/main/default/objects/Sales_Order_Line__c/fields/TotalAmountofBuyingLocal__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountofBuyingLocal__c</fullName>
    <formula>ChargeQuantity__c *  BuyingListPriceLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount of Buying (VND)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>