force-app/main/default/objects/Sales_Order_Line__c/fields/TotalAmountofSellingActual__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountofSellingActual__c</fullName>
    <formula>ChargeQuantity__c * SellingListPriceActual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount of Selling (Actual)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>