force-app/main/default/objects/Sales_Order_Line__c/fields/TotalAmountofSellingLocal__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountofSellingLocal__c</fullName>
    <formula>ChargeQuantity__c *  SellingListPriceLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount of Selling (VND)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>