force-app/main/default/objects/Sales_Order_Line__c/fields/TotalSellingInclTaxActual__c.field-meta.xml
<CustomField>
    <fullName>TotalSellingInclTaxActual__c</fullName>
    <formula>TotalAmountofSellingActual__c +  AmountTaxSellingActual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Selling Incl Tax (Actual)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>