force-app/main/default/objects/Sales_Order_Line__c/fields/TotalSellingInclTaxFCY__c.field-meta.xml
<CustomField>
    <fullName>TotalSellingInclTaxFCY__c</fullName>
    <formula>TotalAmountofSellingFCY__c +  AmountTaxSellingFCY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Selling Incl Tax (USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>