force-app/main/default/objects/Sales_Order_Line__c/fields/TotalSellingInclTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>TotalSellingInclTaxLocal__c</fullName>
    <formula>TotalAmountofSellingLocal__c +  AmountTaxSellingLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Selling Incl Tax (VND)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>