force-app/main/default/objects/Sales_Order_Line__c/fields/Transit_Port_VIA_2__c.field-meta.xml
<CustomField>
    <fullName>Transit_Port_VIA_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transit Port (VIA) 2</label>
    <referenceTo>PortCode__c</referenceTo>
    <relationshipLabel>Sales Order Lines (Transit Port (VIA) 2)</relationshipLabel>
    <relationshipName>Sales_Order_Lines1</relationshipName>
    <type>Lookup</type>
</CustomField>