force-app/main/default/objects/Sales_Order_Line__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Service__c</columns>
    <columns>Charge_unit__c</columns>
    <columns>ChargeQuantity__c</columns>
    <columns>Invoice_to__c</columns>
    <columns>CurrencySelling__c</columns>
    <columns>SellingListPriceActual__c</columns>
    <columns>Supplier_Vendor__c</columns>
    <columns>Currency_Buying__c</columns>
    <columns>BuyingListPriceActual__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>